2022-06-17  Alex Kotov  <kotovalexarian@gmail.com>

	* configure.ac: Added package "alloc"
	* include/kernaux/alloc.h: Added

2022-06-16  Alex Kotov  <kotovalexarian@gmail.com>

	libkernaux 0.4.0 released