@@ -4,6 +4,7 @@
 */
 
 #include <kernaux/assert.h>
+#include <kernaux/mutex.h>
 #include <kernaux/version.h>
 
 @comment_line_alloc@#include <kernaux/alloc.h>
